--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js",
-    "test": "npm run test:unit && npm run test:e2e",
-    "test:unit": "cross-env TEST=unit ava ./test/specs/**/*",
-    "test:e2e": "cross-env TEST=e2e ava ./test/e2e/**/*"
+    "lint": "npm run lint:js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "vue-chartjs": "^3.5.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@aws-amplify/cli": "^4.41.2",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue/test-utils": "^1.1.2",
-    "ava": "^3.15.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "cross-env": "^7.0.3",
@@ -35,6 +36,7 @@
     "jsdom-global": "^3.0.2",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
-    "require-extension-hooks-vue": "^3.0.0"
+    "require-extension-hooks-vue": "^3.0.0",
+    "dotenv": "^8.2.0"
   }
 }
