--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "cookie": "^0.4.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "nuxt-helmet": "^2.0.0"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
